fix - landing-header text align

--- a/app/assets/stylesheets/static/landing-page/header.scss
+++ b/app/assets/stylesheets/static/landing-page/header.scss
@@ -1,12 +1,8 @@
-@import 'const';
+@import "const";
 .landing-header {
   margin-top: 50px;
   position: relative;
-  background: linear-gradient(
-    90deg,
-    $s-primary 0%,
-    $s-secondary 100%
-  );
+  background: linear-gradient(90deg, $s-primary 0%, $s-secondary 100%);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -42,6 +38,7 @@
       }
     }
     h3 {
+      text-align: center;
       line-height: 1;
       padding: 0 10px;
       margin: 20px 0;
